--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/tinker": "^1.0",
         "moontoast/math": "^1.2",
         "overtrue/laravel-lang": "^3.0",
-        "yansongda/pay": "^2.8"
+        "yansongda/pay": "^2.8",
+        "laravel/horizon": "^3.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
